fixed photos not showing + minor ui improvements

--- a/src/index.css
+++ b/src/index.css
@@ -139,3 +139,10 @@ body {
     justify-content: center;
   }
 }
+
+.subheader {
+  font-size: 0.9em;
+  font-weight: initial;
+  font-style: italic;
+  color: red;
+}
